# opengl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/cameras/: main.camera
assets/foreign/: cube_cam_light.glb  cube_textured_cam_light.glb  grass.gltf  window.gltf
assets/materials/: crate.material
assets/models/: pot_light_cam.blend  pot_light_cam.gltf  tree_cam_light.glb
assets/shaders/: debug.fs  debug.vs  light.fs  light.vs  outliner.fs  outliner.vs  pbr.fs  retouching.fs  skybox.fs  skybox.vs
assets/soul/: camera_main.soul  image_crate_diffuse.soul  image_crate_specular.soul  material_crate.soul  texture_crate_diffuse.soul
assets/textures/: crate_diffuse.texture  crate_emissive.texture  crate_specular.texture
examples/: example.rs  general.rs  square.rs
src/: ascii.rs  asset.rs  assets.rs  benchmark.rs  camera.rs  character.rs  cubemap.rs  font.rs  framebuffer.rs  image.rs  inputs.rs  lib.rs  light.rs  main.rs  material.rs  math_auracle.rs  maths.rs  mesh.rs  program.rs  serialization.rs  shader.rs  texture.rs  types.rs  vault.rs  vertex.rs
src/assets/: camera.rs  font.rs  image.rs  light.rs  material.rs  mesh.rs  model.rs  program.rs  shader.rs  texture.rs
src/framebuffer/: renderbuffer.rs  texturebuffer.rs
src/shaders/: UI.vs  a.fs  a.vs  fragment.fs  fragment.glsl  light.vs  phong.fs  ui.fs  ui.vs  vertex.glsl  vertex.vs
tests/: assets.rs  gen_assets.rs  main.rs  testbed.rs
vault/soul/: camera_ui.soul  dirlight.soul  image_crate_emissive.soul  pointlight.soul  spotlight.soul  texture_crate_emissive.soul  (+1 more)
(+3 files in other folders)
