[package]
name = "revenant"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
cgmath = { version = "0.18.0", features = ["serde"] }
freetype-rs = "0.32.0"
gl = "0.14.0"
glfw = "0.51.0"
gltf = "1.1.0"
image = "0.24.5"
optick = "1.3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serde_derive = "1.0"
terminal_color_builder = "0.1.1"
url = "2.3.1"
base64 = "0.21.0"

[profile.release]
opt-level = 3
